# aima-status

./: .env.example  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 02003c02f6c4_create_tables.py  b9f0663e3bc5_create_tables.py
docker/: docker-compose.yml
src/: main.py
src/api/: actions.py  content.py  datatypes.py  fsm.py  handlers.py  menu.py  middleware.py  usecases.py  utils.py
src/db/: connection.py  dto.py  enums.py  models.py  usecases.py
src/db/adapters/: cities.py
