[tool.poetry]
name = "aima-status"
version = "0.1.0"
description = "SEF/AIMA statuses notifications"
authors = ["Vadim Gazizov <i.am.vadim.gazizov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
